--- a/main.css
+++ b/main.css
@@ -4,3 +4,159 @@
   box-sizing: border-box;
   font-family: "Bebas Neue", cursive;
 }
+body{
+  overflow-x: hidden;
+}
+/* NAVBAR */
+#nav-logo{
+  height: 70px;
+}
+.nav-cart-icon-container{
+  width: 32px;
+  height: 32px;
+  display: flex;
+}
+.num-of-cart-items{
+  position: absolute;
+  background-color: red;
+  color: white;
+  border-radius: 10px;
+  padding: 2px 5px;
+  font-weight: 100;
+  font-size: 12px;
+}
+#nav-cart-icon{
+  height: 35px;
+  cursor: pointer;
+}
+.nav-wrapper{
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.nav-container{
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav-links-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 33%;
+  gap: 20%;
+  list-style: none;
+}
+.nav-links{
+  cursor: pointer;
+  font-size: 24px;
+  border: 2px solid transparent;
+}
+.nav-links:hover{
+  border-bottom: 2px solid rgb(153, 47, 47);
+}
+/* BURGER */
+.burger{
+  height: 3px;
+  width: 30px;
+  background-color: black;
+  transition: all 0.5s ease;
+}
+.burger-icon{
+  height: 24px;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  display: none;
+}
+.burger-icon:hover{
+  cursor: pointer;
+}
+.line1-opened{
+  transform: rotate(-45deg) translateY(15px);
+}
+.line3-opened{
+  transform: rotate(45deg) translateY(-15px);
+}
+.line2-opened{
+  opacity: 0;
+}
+.nav-links-a{
+  text-decoration: none;
+  color: black;
+}
+/* NAVBAR RESPONSIVENESS */
+@media screen and (max-width: 963px){
+  .burger-icon{
+    display: flex;
+  }
+  .nav-links-container{
+    position: absolute;
+    top: 80px;
+    flex-direction: column;
+    height: calc(100% - 80px);
+    background-color: rgb(83, 83, 83);
+    width: 80%;
+    z-index: 10;
+    float: left;
+    gap: 0;
+    right: 0;
+    transform: translateX(100%);
+    visibility: hidden;
+  }
+  .side-menu-visible{
+    transform: translateX(0);
+    visibility: visible;
+  }
+  .nav-links{
+    background-color: rgb(255, 255, 255);
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .nav-links-a{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .nav-links:hover{
+    background-color: rgb(153, 47, 47);
+    color: white;
+  }
+  .nav-links-a:hover{
+    background-color: rgb(153, 47, 47);
+    color: white;
+  }
+}
+
+
+
+/* Hero Section */
+.hero-section{
+  width: 100%;
+  background-color: rgb(50, 53, 68);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 80px);
+}
+.hero-container{
+  width: 90%;
+  height: 100%;
+  background-color: white;
+}
+.hero-left{
+  background-image: url('/images/heroImage.jpg');
+  width: 40%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+}
