--- a/main.css
+++ b/main.css
@@ -142,7 +142,6 @@ body{
 /* Hero Section */
 .hero-section{
   width: 100%;
-  background-color: rgb(50, 53, 68);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -152,6 +151,10 @@ body{
   width: 90%;
   height: 100%;
   background-color: white;
+  display: flex;
+  justify-self: center;
+  align-items: center;
+  gap: 15px;
 }
 .hero-left{
   background-image: url('/images/heroImage.jpg');
@@ -159,4 +162,58 @@ body{
   height: 100%;
   background-size: cover;
   background-position: center;
+}
+.hero-title-container{
+  position: absolute;
+  text-align: center;
+  width: 90%;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+#shop-now{
+  background-color: rgb(153, 47, 47);
+  color: white;
+  font-size: 24px;
+  font-weight: 100;
+  padding: 5px 15px;
+  border: 1px solid white;
+}
+.hero-title{
+  font-size: 15vw;
+  font-weight: 100;
+  color: white;
+  text-shadow: -2px 2px 10px #000000;
+  max-width: 1100px;
+}
+.hero-right{
+  width: 60%;
+  height: 100%;
+  gap: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.top-right{
+  background-image: url('/images/heroImage2.jpg');
+  height: 50%;
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+}
+.bottom-right{
+  background-image: url('/images/heroImage3.jfif');
+  width: 100%;
+  height: 50%;
+  background-size: cover;
+  background-position: center;
+}
+
+@media screen and (min-width: 1430px){
+  .hero-title{
+    font-size: 216px;
+  }
 }
