--- a/main.css
+++ b/main.css
@@ -217,3 +217,80 @@ body{
     font-size: 216px;
   }
 }
+
+
+/* sale banner */
+.sale-banner{
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.sale-banner-container{
+  width: 90%;
+}
+#sale-banner{
+  width: 100%;
+}
+.featured{
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 28px;
+}
+.featured-container{
+  width: 90%;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 30px;
+}
+.featured-bottom{
+  width: 100%;
+  height: 300px;
+  background-image: url('/images/featured.gif');
+  background-position: center;
+  background-size: contain;
+}
+
+.featured-top{
+  width: 100%;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.featured-top-left{
+  background-image: url('/images/featuredOld.gif');
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-size: cover;
+}
+.featured-top-right{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.featured-title{
+  font-size: 8vw;
+  text-align: center;
+  color: #111111;
+}
+.featured-p{
+  font-size: 24px;
+  text-align: center;
+}
+@media screen and (min-width: 1470px){
+  .featured-title{
+    font-size: 150px;
+  }
+}
